# signal_stm

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  _s_t_m32_f103_c8_t_2handlers_8ipp.html  _s_t_m32_f103_c8_t_2handlers_8ipp.js  _s_t_m32_f103_c8_t_2handlers_8ipp__dep__incl.map  _s_t_m32_f103_c8_t_2handlers_8ipp__dep__incl.md5  _s_t_m32_f103_c8_t_2handlers_8ipp_a9cdc63af1166aec768f87546a48bec8d_cgraph.map  _s_t_m32_f103_c8_t_2handlers_8ipp_a9cdc63af1166aec768f87546a48bec8d_cgraph.md5  _s_t_m32_f103_c8_t_2handlers_8ipp_abd49de55f82b1a0be3edaaf34dbe4b14_cgraph.map  _s_t_m32_f103_c8_t_2handlers_8ipp_abd49de55f82b1a0be3edaaf34dbe4b14_cgraph.md5  _s_t_m32_f103_c8_t_2handlers_8ipp_source.html  _s_t_m32_f103_c8_t_2hardware__mapping_8hpp.html  _s_t_m32_f103_c8_t_2hardware__mapping_8hpp__dep__incl.map  _s_t_m32_f103_c8_t_2hardware__mapping_8hpp__dep__incl.md5  _s_t_m32_f103_c8_t_2hardware__mapping_8hpp_source.html  _s_t_m32_f103_c8_t_2master_8hpp.html  _s_t_m32_f103_c8_t_2master_8hpp.js  _s_t_m32_f103_c8_t_2master_8hpp__incl.map  _s_t_m32_f103_c8_t_2master_8hpp__incl.md5  _s_t_m32_f103_c8_t_2master_8hpp_source.html  _s_t_m32_f411_c_e6_2handlers_8ipp.html  _s_t_m32_f411_c_e6_2handlers_8ipp.js  _s_t_m32_f411_c_e6_2handlers_8ipp__dep__incl.map  _s_t_m32_f411_c_e6_2handlers_8ipp__dep__incl.md5  _s_t_m32_f411_c_e6_2handlers_8ipp_ab94969e4f01f86c8a4c1ce3c5a47fc45_cgraph.map  _s_t_m32_f411_c_e6_2handlers_8ipp_ab94969e4f01f86c8a4c1ce3c5a47fc45_cgraph.md5  _s_t_m32_f411_c_e6_2handlers_8ipp_af9c91d55ef7bebf93f81659a6eb03daf_cgraph.map  _s_t_m32_f411_c_e6_2handlers_8ipp_af9c91d55ef7bebf93f81659a6eb03daf_cgraph.md5  _s_t_m32_f411_c_e6_2handlers_8ipp_source.html  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp.html  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp__dep__incl.map  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp__dep__incl.md5  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp__incl.map  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp__incl.md5  _s_t_m32_f411_c_e6_2hardware__mapping_8hpp_source.html  _s_t_m32_f411_c_e6_2master_8hpp.html  _s_t_m32_f411_c_e6_2master_8hpp.js  (+311 more)
.github/workflows/: build.yml  docs.yml
CMake/: arm-none-eabi-gcc.cmake  gcc-options-cxx.txt
Config/: stm32f411.cfg  tm32f103c8_blue_pill.cfg
Docs/: Doxyfile
Drivers/: CMakeLists.txt
Drivers/STM32F103C8T/: CMakeLists.txt
Drivers/STM32F103C8T/CMake/: specific.cmake
Drivers/STM32F411CE6/: CMakeLists.txt
Drivers/STM32F411CE6/CMake/: specific.cmake
Examples/STM32F103C8T/: adc.cpp
Examples/STM32F411CE6/: adc.cpp  dwt.cpp
SignalDrivers/: CMakeLists.txt
SignalDrivers/Hardware/: abstract_master.hpp  adc.hpp  dma.hpp  hardware_layout.hpp  ioport.hpp  port.hpp  uart.hpp
SignalDrivers/Specific/STM32F103C8/: handlers.ipp  hardware_mapping.hpp  master.hpp
SignalDrivers/Specific/STM32F103C8T/: handlers.ipp  hardware_mapping.hpp  master.hpp
SignalDrivers/Specific/STM32F411CE6/: handlers.ipp  hardware_mapping.hpp  master.hpp
SignalDrivers/Utils/: buffer.hpp  codec.hpp  converters.hpp  data.hpp  led.hpp  logger.hpp  processor.hpp  rfft.hpp  wavelet.hpp
Src/: example.cpp  example_STM32F103C8T.cpp  example_STM32F411CE6.cpp
html/: _c_make_lists_8txt.html  abstract__master_8hpp.html  abstract__master_8hpp__dep__incl.map  abstract__master_8hpp__dep__incl.md5  abstract__master_8hpp__incl.map  adc_8hpp.html  adc_8hpp__incl.md5  adc_8hpp_source.html  annotated.html  annotated_dup.js  buffer_8hpp.html  buffer_8hpp__dep__incl.md5  buffer_8hpp__incl.map  buffer_8hpp_source.html  class_s_d_1_1_hardware_1_1_a_d_c_3_01false_01_4-members.html  class_s_d_1_1_hardware_1_1_a_d_c_3_01true_01_4.html  class_s_d_1_1_hardware_1_1_a_d_c_3_01true_01_4.js  class_s_d_1_1_hardware_1_1_abstract_master-members.html  class_s_d_1_1_hardware_1_1_abstract_master.html  class_s_d_1_1_hardware_1_1_abstract_master__inherit__graph.map  class_s_d_1_1_hardware_1_1_abstract_master__inherit__graph.md5  class_s_d_1_1_hardware_1_1_async_u_a_r_t-members.html  class_s_d_1_1_hardware_1_1_async_u_a_r_t.html  class_s_d_1_1_hardware_1_1_async_u_a_r_t.js  class_s_d_1_1_hardware_1_1_async_u_a_r_t__coll__graph.map  class_s_d_1_1_hardware_1_1_async_u_a_r_t__inherit__graph.map  class_s_d_1_1_hardware_1_1_async_u_a_r_t__inherit__graph.md5  class_s_d_1_1_hardware_1_1_async_u_a_r_t_a69a5af610f07874ad4293b7e29e35d26_cgraph.map  class_s_d_1_1_hardware_1_1_async_u_a_r_t_a69a5af610f07874ad4293b7e29e35d26_cgraph.md5  class_s_d_1_1_hardware_1_1_base_u_a_r_t-members.html  class_s_d_1_1_hardware_1_1_base_u_a_r_t.html  class_s_d_1_1_hardware_1_1_base_u_a_r_t.js  class_s_d_1_1_hardware_1_1_base_u_a_r_t_a11a1de86713c4a3e529a3859592fba00_cgraph.map  class_s_d_1_1_hardware_1_1_base_u_a_r_t_a11a1de86713c4a3e529a3859592fba00_cgraph.md5  class_s_d_1_1_hardware_1_1_blocking_u_a_r_t.html  class_s_d_1_1_hardware_1_1_blocking_u_a_r_t.js  class_s_d_1_1_hardware_1_1_blocking_u_a_r_t__coll__graph.map  class_s_d_1_1_hardware_1_1_blocking_u_a_r_t__coll__graph.md5  class_s_d_1_1_hardware_1_1_blocking_u_a_r_t__inherit__graph.map  class_s_d_1_1_hardware_1_1_d_m_a_pipe-members.html  (+142 more)
html/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_5.js  all_8.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  (+9 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+49 more)
